# CompletionList

./: .gitignore  README.md  doc_2026-03-15_13-10-22.pre-commit-config.yaml  docker-compose.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/apps/accounts/: serializers.py  urls.py  views.py
backend/apps/lists/: admin.py  igdb.py  models.py  serializers.py  urls.py  views.py
backend/apps/lists/migrations/: 0001_initial.py  0002_gameentry_owner.py  0003_gameentry_cover_url_gameentry_rating.py  0004_gameentry_igdb_fields.py
backend/config/: settings.py  urls.py
frontend/: .env.local.example  package-lock.json  package.json
frontend/.next/: trace
frontend/.next/cache/: config.json
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/server-development/: index.pack.gz.old
frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: next.js
frontend/.next/static/chunks/: webpack.js
frontend/.next/static/chunks/app/: layout.js  page.js
frontend/.next/static/css/app/: layout.css
frontend/.next/static/webpack/: webpack.944afe599788ee52.hot-update.js  webpack.f6930dee3e962ad4.hot-update.js  webpack.fc2c3a4dceab81c7.hot-update.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/games/[slug]/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/: site-header.tsx
(+5 files in other folders)
