[project]
name = "completion-list-backend"
version = "0.1.0"
description = "Minimal Django + DRF backend for tracking game completion lists"
requires-python = ">=3.12"
dependencies = [
    "Django==5.1.7",
    "djangorestframework==3.15.2",
    "django-cors-headers==4.6.0",
    "psycopg[binary]==3.2.6",
]
